/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Juan Guarnizo
 */
package baseline;

public class Solution46 {
    public static void main(String[] args) {

        wordCounter main = new wordCounter();

        main.countWords();

        main.display();
    }
}
