package baseline;

public class word {
    private String text;
    private int frequency;

    public int getFrequency() {
        return frequency;
    }

    public String getText() {
        return text;
    }

    public void setFrequency(int frequency) {
        this.frequency = frequency;
    }

    public void setText(String text) {
        this.text = text;
    }
}
